--- a/reactapp/src/Components/Common/density-preferences/images/styles.module.scss
+++ b/reactapp/src/Components/Common/density-preferences/images/styles.module.scss
@@ -1,6 +1,7 @@
 // Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 // SPDX-License-Identifier: MIT-0
 
+/*
 @use '~@cloudscape-design/design-tokens' as cs;
 
 .window {
@@ -39,3 +40,5 @@
 .separator {
     stroke: cs.$color-border-divider-default;
 }
+
+*/
